Document PPDG/src/objects/Daily_Direct_Sales_Control_Log__c.object
<CustomObject>
    <fields>
        <fullName>Accounts_opened_with_certified_KYC_docs__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Accounts opened with certified KYC docs</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_mismatch_report_attached__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Address mismatch report attached</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_maturity_process_actioned__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>All maturity process actioned</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Daily_Direct_Sales_Control_Log4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Breached__c</fullName>
        <label>Breached</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_wrapping_sample__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Call wrapping: sample</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_sent_if_applicable__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Case sent if applicable</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cases_seller_queue_direct_sales_queu__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Cases (seller queue &amp; direct sales queu)</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Checked_and_signed_by_DL_Manager__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Checked and signed by DL Manager</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_KYC_checklist__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Completed KYC checklist</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Daily_Direct_Sales_Control_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Correct_Stage__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <inlineHelpText>Head Office/Online apps sent
 
https://eu1.salesforce.com/00OD0000007Dyuy
 
Checking for:
 
1) Docs attached
2) Correct stage
3) Printing status
4) Case sent if applicable
5) All maturity process actioned</inlineHelpText>
        <label>Correct Stage</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Daily_Rota_Updated__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Daily Rota Updated</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desks_Clear__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Desks Clear</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Docs_attached__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <inlineHelpText>Customer Accounts Opened Yesterday Report
 
20% random sample of all the previous day’s applications ensuring opportunities have the necessary paperwork attached &amp; are sent for printing where applicable</inlineHelpText>
        <label>Docs attached</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Errors_by_whom1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Errors by whom</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Daily_Direct_Sales_Control_Log2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Errors_by_whom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Errors by whom</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Daily_Direct_Sales_Control_Log1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback_given_to_individuals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feedback given to individuals</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Daily_Direct_Sales_Control_Log3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Findings1__c</fullName>
        <label>Findings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Findings__c</fullName>
        <label>Findings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_no_comments10__c</fullName>
        <label>If no comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_no_comments11__c</fullName>
        <label>If no comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_no_comments12__c</fullName>
        <label>If no comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>In_tray_check__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>In tray check</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LIB__c</fullName>
        <label>LIB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Liabilities_Pipeline__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Liabilities Pipeline</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_checked__c</fullName>
        <label>Number checked</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Address_mismatches__c</fullName>
        <inlineHelpText>Address Mismatch 
Ensure all address mismatch cases are completed with full details and new credit score updated with decision ID completed. (Evidence obtained)</inlineHelpText>
        <label>Number of Address mismatches</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_opened__c</fullName>
        <label>Number opened</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Online_sales_enquiries__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Online sales enquiries</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Online_sales_enquiries_webform_action__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Online sales enquiries (webform) action</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outstanding__c</fullName>
        <label>Outstanding</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Perpendicular_diary_usage__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Perpendicular diary usage</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pipeline_value_Direct__c</fullName>
        <label>Pipeline value Direct</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pipeline_value_Online__c</fullName>
        <label>Pipeline value Online</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Printing_status__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Printing status</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retention_forms_received__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Retention forms received</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_1100__c</fullName>
        <label>Total 1100</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_1199__c</fullName>
        <label>Total 1199</label>
        <type>TextArea</type>
    </fields>
    <label>Daily Direct Sales Control Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Daily Direct Sales Control Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Direct Sales Control Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>